# Sephela

./: .gitignore  Makefile
ai/agents/: base.py  code.py  manifest.py  permission.py  report.py  risk.py  threat_intel.py
ai/orchestration/: graph.py  runner.py
ai/schemas/: base.py  risk.py  threat_intel.py
ai/scoring/: __init__.py  categorizer.py  constants.py  engine.py  models.py  synergy.py
ai/tests/: __init__.py
ai/tests/test_orchestration/: test_graph.py
ai/tests/test_schemas/: test_all_schemas.py
ai/tests/test_scoring/: __init__.py  test_categorizer.py  test_engine.py  test_profiles.py  test_synergy.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routers/: auth.py  health.py
backend/app/core/: config.py  exceptions.py  integration.py  logging.py  middleware.py  redis.py  security.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  identity.py
backend/app/schemas/: auth.py  common.py
backend/app/tasks/: celery_app.py  health.py
backend/tests/: test_health.py
engines/dynamic/: pyproject.toml
engines/dynamic/sephela_dynamic/: __init__.py  base.py  envelope.py  pipeline.py  schemas.py
engines/dynamic/sephela_dynamic/extractors/: __init__.py  frida.py  logcat.py  network.py
engines/dynamic/tests/: __init__.py  conftest.py  test_extractors.py  test_pipeline.py
engines/reporting/: pyproject.toml
engines/reporting/sephela_reporting/: __init__.py  engine.py  models.py
engines/reporting/sephela_reporting/renderers/: __init__.py  html.py  json_renderer.py  markdown.py  pdf.py  sarif.py
engines/reporting/sephela_reporting/templates/: report.html.j2  report.md.j2  styles.css
engines/reporting/tests/: __init__.py  conftest.py  test_engine.py  test_models.py  test_renderers.py
frontend/: tsconfig.tsbuildinfo
infra/compose/: docker-compose.yml
infra/sandbox/: Dockerfile.sandbox  README.md  docker-compose.sandbox.yml  frida_hooks.js  run_analysis.sh
infra/sandbox/scripts/: frida_to_json.py  logcat_to_json.py  pcap_to_json.py
tests/: conftest.py  test_e2e_integration.py
