[project]
name = "sephela-reporting-engine"
version = "0.1.0"
description = "Sephela Reporting Engine — renders analysis results into JSON, Markdown, HTML, PDF, and SARIF formats"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "jinja2>=3.1",
]

[project.optional-dependencies]
pdf = [
    "weasyprint>=62",
]
dev = [
    "pytest>=8.2",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sephela_reporting*"]
